@@ -142,4 +142,8 @@
 
 "(?1)(?#?'){2}(a)"
 
+/.((?2)(?R)|\1|$)()/
+
+/.((?3)(?R)()(?2)|\1|$)()/
+
 # End of testinput8
